--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,10 @@ body {
 
 .header {
 	width: 100%;
+		display: flex;
+	justify-content: space-between;
+	width: 100%;
+	margin-top: -6px;
 }
 
 p, blockquote {
@@ -107,7 +111,7 @@ figure {
 
 .logo {
 	width: 70px;
-	margin-top: 0px;
+	margin-top: -5px;
 }
 
 
