--- a/css/main.css
+++ b/css/main.css
@@ -11,10 +11,6 @@ body {
 
 .header {
 	width: 100%;
-		display: flex;
-	justify-content: space-between;
-	width: 100%;
-	margin-top: -6px;
 }
 
 p, blockquote {
@@ -118,9 +114,12 @@ figure {
 
 header {
 	display: flex;
+	flex-direction: row;
 	justify-content: space-between;
 	width: 100%;
 	margin-top: -6px;
+	
+	
 }
 
 
