--- a/css/main.css
+++ b/css/main.css
@@ -119,6 +119,9 @@ header {
 	justify-content: space-between;
 	width: 100%;
 	margin-top: -6px;
+	  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 	
 	
 }
