--- a/css/main.css
+++ b/css/main.css
@@ -118,10 +118,13 @@ header {
 	flex-direction: row;
 	justify-content: space-between;
 	width: 100%;
-	margin-top: 0px;
-	  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
+	margin-top: -6px;
+  -ms-box-orient: horizontal;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -moz-flex;
+  display: -webkit-flex;
 	
 	
 }
