--- a/css/main.css
+++ b/css/main.css
@@ -114,11 +114,9 @@ figure {
 
 header {
 	display: flex;
-	flex: 1;
-	flex-direction: row;
 	justify-content: space-between;
 	width: 100%;
-	margin-top: -6px;
+	margin: 0px;
 	
 	
 }
