--- a/css/main.css
+++ b/css/main.css
@@ -114,7 +114,7 @@ figure {
 
 header {
 	display: flex;
-	justify-content: space-around;
+	justify-content: space-between;
 	width: 100%;
 	margin-top: -6px;
 	
