--- a/css/main.css
+++ b/css/main.css
@@ -117,8 +117,14 @@ header {
 	justify-content: space-between;
 	width: 100%;
 	margin-top: -6px;
-	
-	
+}
+
+ul.breadcrump .logo {
+  background: black;
+  display: block;
+  position: absolute;
+  right: 0;
+  top: 0;
 }
 
 
