--- a/css/main.css
+++ b/css/main.css
@@ -119,7 +119,7 @@ header {
 	margin-top: -6px;
 }
 
-ul.breadcrump .logo {
+ul.breadcrumb .logo {
   background: black;
   display: block;
   position: absolute;
