--- a/css/main.css
+++ b/css/main.css
@@ -114,17 +114,9 @@ figure {
 
 header {
 	display: flex;
-	justify-content: space-between;
+	justify-content: center;
 	width: 100%;
 	margin-top: -6px;
-}
-
-ul.breadcrumb .logo {
-  background: black;
-  display: block;
-  position: absolute;
-  right: 0;
-  top: 0;
 }
 
 
