--- a/css/main.css
+++ b/css/main.css
@@ -108,7 +108,6 @@ figure {
 .logo {
 	width: 70px;
 	margin-top: -5px;
-	position: absolute;
 }
 
 
@@ -144,7 +143,7 @@ footer .footer-container .container .footer-links li {
 }
 
 .hide-mobile {
-	
+	display: none;
 	
 }
 
