--- a/css/main.css
+++ b/css/main.css
@@ -107,7 +107,7 @@ figure {
 
 .logo {
 	width: 70px;
-	margin-top: -5px;
+	margin-top: 25px;
 }
 
 
@@ -142,7 +142,10 @@ footer .footer-container .container .footer-links li {
 	margin: 3px;
 }
 
-
+.hide-mobile {
+	display: none;
+	
+}
 
 .menu {
 	width: 30px;
@@ -470,7 +473,9 @@ nav ul li a:hover {
 	margin: 0px auto 5% auto;
 	}
 	
-
+	.hide-desktop {
+	display: none;
+	}
 	
 	nav ul {
 		position: inherit;
