--- a/css/main.css
+++ b/css/main.css
@@ -142,10 +142,11 @@ footer .footer-container .container .footer-links li {
 	margin: 3px;
 }
 
-.hide-mobile {
+/*.hide-mobile {
 	display: none;
 	
 }
+*/
 
 .menu {
 	width: 30px;
@@ -473,10 +474,10 @@ nav ul li a:hover {
 	margin: 0px auto 5% auto;
 	}
 	
-	.hide-desktop {
+	/*.hide-desktop {
 	display: none;
 	}
-	
+	*/
 	nav ul {
 		position: inherit;
 		width: auto;
