--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 /* CSS Document */
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,900&display=swap');
-
+@import url("css/style.css");
 
 body {
 	margin: 0;
