--- a/main3d.css
+++ b/main3d.css
@@ -125,7 +125,7 @@ body {
 	transform: translate3d(-50%,-50%,50px);
 }
 
-.container .box .product
+.container .box .voorgrond
 {
 	position: absolute;
 	top: 50%;
@@ -137,7 +137,24 @@ body {
 	transform: translate3d(-50%,-50%,50px) rotate(-15deg);
 }
 
-.container .box:hover .product
+.container .box .achtergrond
+{
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	max-width: 300px;
+	z-index: 12;
+	transition: 0.5s;
+	transform-style: preserve-3d;
+	transform: translate3d(-50%,-50%,50px) rotate(-15deg);
+}
+
+.container .box:hover .voorgrond
+{	
+transform: translate3d(-50%,-50%,100px) rotate(-15deg);
+	}
+
+.container .box:hover .achtergrond
 {	
 transform: translate3d(-50%,-50%,100px) rotate(-15deg);
 	}
