--- a/main3d.css
+++ b/main3d.css
@@ -19,21 +19,32 @@ body {
 
 .container {
 	padding: 2em 1.2em;
-	transform-style: preserve-3d;
 }
 
-.container .box
+.bewegende-container {
+	padding: 2em 1.2em;
+	transform-style: preserve-3d;
+	justify-content: space-between;
+	display: flex;
+}
+
+
+.bewegende-container .box
 {
 	position: relative;
-	width: 300px;
+	width: 100%;
 	height: 400px;
-	margin: 40px;
+	margin: 10px;
 	background: #232323;
 	border-radius: 20px;
 	transform-style: preserve-3d;
+		flex-wrap: wrap;
+	
+				flex: 0 100%;
+		display: inline-block;
 }
 
-.container .box::before
+.bewegende-container .box::before
 {
 	content: 'ADIDAS';
 	position: absolute;
@@ -46,7 +57,7 @@ body {
 	opacity: 0;
 }
 
-.container .box::after
+.bewegende-container .box::after
 {
 	content: 'SHOES';
 	position: absolute;
@@ -60,13 +71,13 @@ body {
 	transition: 0.5s;
 }
 
-.container .box:hover::before,
-.container .box:hover::after
+.bewegende-container .box:hover::before,
+.bewegende-container .box:hover::after
 {
 	opacity: 0.04;
 }
 
-.container .box .name{
+.bewegende-container .box .name{
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -80,13 +91,13 @@ body {
 	z-index: 10;
 }
 
-.container .box:hover .name
+.bewegende-container .box:hover .name
 {
 	top: 40px;
 	opacity: 1;
 }
 
-.container .box .buy
+.bewegende-container .box .buy
 {
 	position: absolute;
 	bottom: 0;
@@ -103,13 +114,13 @@ body {
 	z-index: 10;
 }
 
-.container .box:hover .buy
+.bewegende-container .box:hover .buy
 {
 	bottom: 40px;
 	opacity: 1;
 }
 
-.container .box .circle
+.bewegende-container .box .circle
 {
 	position: absolute;
 	top: 50%;
@@ -125,56 +136,56 @@ body {
 	transform: translate3d(-50%,-50%,50px);
 }
 
-.container .box .voorgrond
+.bewegende-container .box .voorgrond
 {
 	position: absolute;
 	top: 50%;
 	left: 50%;
-	max-width: 300px;
+	max-width: 100%;
 	z-index: 11;
 	transition: 0.5s;
 	transform-style: preserve-3d;
 	transform: translate3d(-50%,-50%,60px) rotate(0deg);
 }
 
-.container .box .achtergrond
+.bewegende-container .box .achtergrond
 {
 	position: absolute;
 	top: 50%;
 	left: 50%;
-	max-width: 300px;
+	max-width: 100%;
 	z-index: 12;
 	transition: 0.5s;
 	transform-style: preserve-3d;
 	transform: translate3d(-50%,-50%,50px) rotate(0deg);
 }
 
-.container .box:hover .voorgrond
+.bewegende-container .box:hover .voorgrond
 {	
 transform: translate3d(-50%,-50%,130px) rotate(0deg);
 	}
 
-.container .box:hover .achtergrond
+.bewegende-container .box:hover .achtergrond
 {	
 transform: translate3d(-50%,-50%,100px) rotate(-1deg);
 	}
 	
-.container .box:nth-child(1) .circle,
-.container .box:nth-child(1) .buy
+.bewegende-container .box:nth-child(1) .circle,
+.bewegende-container .box:nth-child(1) .buy
 
 {
 	background: #379bf7;
 }
 
-.container .box:nth-child(2) .circle,
-.container .box:nth-child(2) .buy
+.bewegende-container .box:nth-child(2) .circle,
+.bewegende-container .box:nth-child(2) .buy
 
 {
 	background: #379bf7;
 }
 
-.container .box:nth-child(3) .circle,
-.container .box:nth-child(3) .buy
+.bewegende-container .box:nth-child(3) .circle,
+.bewegende-container .box:nth-child(3) .buy
 
 {
 	background: #379bf7;
