--- a/main3d.css
+++ b/main3d.css
@@ -395,6 +395,7 @@ nav ul li a:hover {
 
 .grafische-opdrachten-container img:hover {
 		filter: brightness(100%);
+	transform: translate3d(0%,0%,130px) scale(8) rotate(-0);
 }
 
 
