--- a/main3d.css
+++ b/main3d.css
@@ -33,9 +33,9 @@ body {
 {
 	position: relative;
 	width: 100%;
-	height: 400px;
+	height: 250px;
 	margin: 20px;
-	background: #232323;
+	background: #24A596;
 	border-radius: 20px;
 	transform-style: preserve-3d;
 	flex-wrap: wrap;
@@ -84,7 +84,7 @@ body {
 	color: #fff;
 	width: 100%;
 	transform-style: preserve-3d;
-	transform: translate3d(0,0,75px);
+	transform: translate3d(0,0,170px);
 	transition: 0.5s;
 	opacity: 0;
 	z-index: 10;
@@ -102,7 +102,7 @@ body {
 	bottom: 0;
 	left: 50%;
 	transform-style: preserve-3d;
-	transform: translate3d(-50%,0,75px);
+	transform: translate3d(-50%,0,170px);
 	color: #fff;
 	background: #333;
 	padding: 10px 25px;
@@ -144,10 +144,10 @@ body {
 	z-index: 11;
 	transition: 0.5s;
 	transform-style: preserve-3d;
-	transform: translate3d(-50%,-50%,60px) rotate(0deg);
+	transform: translate3d(-50%,-50%,70px) rotate(0deg);
 }
 
-.bewegende-container .box .achtergrond
+.bewegende-container .box .midden
 {
 	position: absolute;
 	top: 50%;
@@ -156,24 +156,55 @@ body {
 	z-index: 12;
 	transition: 0.5s;
 	transform-style: preserve-3d;
+	transform: translate3d(-50%,-50%,60px) rotate(0deg);
+}
+	
+.bewegende-container .box .achtergrond
+{
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	max-width: 100%;
+	z-index: 13;
+	transition: 0.5s;
+	transform-style: preserve-3d;
 	transform: translate3d(-50%,-50%,50px) rotate(0deg);
 }
 
+.bewegende-container .box:hover
+{	
+border-radius: 50%;
+height: 300px;
+}
+	
+
 .bewegende-container .box:hover .voorgrond
 {	
+transform: translate3d(-50%,-50%,160px) rotate(0deg);
+	border-radius: 200px;
+	}
+
+.bewegende-container .box:hover .midden
+{	
 transform: translate3d(-50%,-50%,130px) rotate(0deg);
+	border-radius: 200px;
 	}
 
 .bewegende-container .box:hover .achtergrond
 {	
 transform: translate3d(-50%,-50%,100px) rotate(-1deg);
+	border-radius: 200px;
 	}
 	
+.bewegende-container .box:nth-child(1)
+{
+	background: #24A596;
+}
+
 .bewegende-container .box:nth-child(1) .circle,
 .bewegende-container .box:nth-child(1) .buy
-
 {
-	background: #379bf7;
+	background: #A7BB17;
 }
 
 .bewegende-container .box:nth-child(2) .circle,
