--- a/main3d.css
+++ b/main3d.css
@@ -34,7 +34,7 @@ body {
 	position: relative;
 	width: 100%;
 	height: 250px;
-	margin: 20px;
+	margin: 10px;
 	background: #24A596;
 	border-radius: 20px;
 	transform-style: preserve-3d;
@@ -43,7 +43,10 @@ body {
 	display: inline-block;
 }
 
-.bewegende-container .box::before
+
+
+
+.bewegende-container .box:nth-child(1)::before
 {
 	content: 'ONLINE';
 	position: absolute;
@@ -56,7 +59,7 @@ body {
 	opacity: 0;
 }
 
-.bewegende-container .box::after
+.bewegende-container .box:nth-child(1)::after
 {
 	content: 'TAXATIE MODULE';
 	position: absolute;
@@ -70,6 +73,63 @@ body {
 	transition: 0.5s;
 }
 
+
+.bewegende-container .box:nth-child(2)::before
+{
+	content: 'HUISSTIJLE';
+	position: absolute;
+	top: 10px;
+	left: 20px;
+	font-size: 1em;
+	font-weight: 900;
+	color: #fff;
+	font-style: italic;
+	opacity: 0;
+}
+
+.bewegende-container .box:nth-child(2)::after
+{
+	content: 'WEBSITE';
+	position: absolute;
+	bottom: 10px;
+	right: 20px;
+	font-size: 1em;
+	font-weight: 900;
+	color: #fff;
+	font-style: italic;
+	opacity: 0;
+	transition: 0.5s;
+}
+
+.bewegende-container .box:nth-child(3)::before
+{
+	content: 'MOTION';
+	position: absolute;
+	top: 10px;
+	left: 20px;
+	font-size: 1em;
+	font-weight: 900;
+	color: #fff;
+	font-style: italic;
+	opacity: 0;
+}
+
+.bewegende-container .box:nth-child(3)::after
+{
+	content: 'GRAPHIC';
+	position: absolute;
+	bottom: 10px;
+	right: 20px;
+	font-size: 1em;
+	font-weight: 900;
+	color: #fff;
+	font-style: italic;
+	opacity: 0;
+	transition: 0.5s;
+}
+
+
+
 .bewegende-container .box:hover::before,
 .bewegende-container .box:hover::after
 {
@@ -81,7 +141,8 @@ body {
 	top: 40px;
 	left: 0;
 	text-align: center;
-	color: #404040;
+	color: #FFFFFF;
+	text-shadow: 0px 0px 40px #000;
 	width: 100%;
 	transform-style: preserve-3d;
 	transform: translate3d(0,0,150px);
@@ -97,28 +158,8 @@ body {
 	backdrop-filter: blur(10px);
 }
 
-.bewegende-container .box .buy
-{
-	position: absolute;
-	bottom: 0;
-	left: 50%;
-	transform-style: preserve-3d;
-	transform: translate3d(-50%,0,170px);
-	color: #fff;
-	background: #333;
-	padding: 10px 25px;
-	border-radius: 30px;
-	text-decoration: none;
-	transition: 0.5s;
-	opacity: 0;
-	z-index: 10;
-}
 
-.bewegende-container .box:hover .buy
-{
-	bottom: 40px;
-	opacity: 1;
-}
+
 
 .bewegende-container .box .circle
 {
@@ -172,6 +213,71 @@ body {
 	transform: translate3d(-50%,-50%,50px) rotate(0deg);
 }
 
+
+
+.bewegende-container .box .voorgrond-logopedie
+{
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	max-width: 100%;
+	z-index: 11;
+	transition: 0.5s;
+	transform-style: preserve-3d;
+	transform: translate3d(-50%,-50%,70px) rotate(0deg);
+}
+
+.bewegende-container .box .midden-logopedie
+{
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	max-width: 100%;
+	z-index: 12;
+	transition: 0.5s;
+	transform-style: preserve-3d;
+	transform: translate3d(-50%,-50%,60px) rotate(0deg);
+}
+	
+.bewegende-container .box .achtergrond-logopedie
+{
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	max-width: 100%;
+	z-index: 13;
+	transition: 0.5s;
+	transform-style: preserve-3d;
+	transform: translate3d(-50%,-50%,50px) rotate(0deg);
+}
+
+.bewegende-container .box .voorgrond-webbio
+{
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	max-width: 100%;
+	z-index: 12;
+	transition: 0.5s;
+	transform-style: preserve-3d;
+	transform: translate3d(-50%,-50%,60px) rotate(0deg);
+}
+	
+.bewegende-container .box .achtergrond-webbio
+{
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	max-width: 100%;
+	z-index: 13;
+	transition: 0.5s;
+	transform-style: preserve-3d;
+	transform: translate3d(-50%,-50%,50px) rotate(0deg);
+}
+
+
+
+
 .bewegende-container .box:hover
 {
 border-radius: 20px;
@@ -195,30 +301,70 @@ transform: translate3d(-35%,-50%,130px) rotate(0deg);
 transform: translate3d(-60%,-50%,100px) rotate(-1deg);
 	border-radius: 0;
 	}
+
+
+
+.bewegende-container .box:hover .voorgrond-logopedie
+{	
+transform: translate3d(-50%,-50%,240px) rotate(0deg);
+	border-radius: 50px;
+	}
+
+.bewegende-container .box:hover .midden-logopedie
+{	
+transform: translate3d(-50%,-50%,215px) rotate(0deg);
+	border-radius: 0px;
+	}
+
+.bewegende-container .box:hover .achtergrond-logopedie
+{	
+transform: translate3d(-50%,-50%,200px) rotate(-0deg);
+	border-radius: 0;
+	}
+
+.bewegende-container .box:hover .voorgrond-webbio
+{	
+transform: translate3d(-50%,-60%,240px) rotate(0deg);
+	border-radius: 50px;
+	}
+
+.bewegende-container .box:hover .achtergrond-webbio
+{	
+transform: translate3d(-50%,-50%,200px) rotate(-0deg);
+	border-radius: 0;
+	}
+
 	
 .bewegende-container .box:nth-child(1)
 {
-	background: #24A596;
+	background-color: #29B3AC;
 }
 
-.bewegende-container .box:nth-child(1) .circle,
-.bewegende-container .box:nth-child(1) .buy
+.bewegende-container .box:nth-child(2)
+{
+	background: #4A9C98;
+}
+
+.bewegende-container .box:nth-child(3)
+{
+	background-color: #CC494A;
+}
+
+
+.bewegende-container .box:nth-child(1) .circle
 {
 	background: #A7BB17;
 }
 
-.bewegende-container .box:nth-child(2) .circle,
-.bewegende-container .box:nth-child(2) .buy
-
+.bewegende-container .box:nth-child(2) .circle
 {
-	background: #379bf7;
+	background: #FB8501;
 }
 
-.bewegende-container .box:nth-child(3) .circle,
-.bewegende-container .box:nth-child(3) .buy
+.bewegende-container .box:nth-child(3) .circle
 
 {
-	background: #379bf7;
+	background-color: #0B3C80;
 }
 
 
