--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,7 @@ body {
 	}
 
 .bewegende-container {
-	padding: 2em 1.2em;
+	padding: 0em 0em;
 	transform-style: preserve-3d;
 	justify-content: space-between;
 	display: flex;
@@ -30,14 +30,13 @@ body {
 	position: relative;
 	width: 100%;
 	height: 275px;
-	margin: 15px;
+	margin: 15px 0 0 15px;
 	background: #24A596;
 	border-radius: 20px;
 	transform-style: preserve-3d;
 	flex-wrap: wrap;
 	flex: 0 100%;
 	display: inline-block;
-	z-index: 9;
 }
 
 
@@ -114,6 +113,33 @@ body {
 .bewegende-container .box:nth-child(3)::after
 {
 	content: 'GRAPHIC';
+	position: absolute;
+	bottom: 10px;
+	right: 20px;
+	font-size: 1em;
+	font-weight: 900;
+	color: #fff;
+	font-style: italic;
+	opacity: 0;
+	transition: 0.5s;
+}
+
+.bewegende-container .box:nth-child(4)::before
+{
+	content: 'MEER';
+	position: absolute;
+	top: 10px;
+	left: 20px;
+	font-size: 1em;
+	font-weight: 900;
+	color: #fff;
+	font-style: italic;
+	opacity: 0;
+}
+
+.bewegende-container .box:nth-child(4)::after
+{
+	content: 'OPDRACHTEN';
 	position: absolute;
 	bottom: 10px;
 	right: 20px;
@@ -429,6 +455,38 @@ body {
 	mix-blend-mode: multiply;
 }
 
+.bewegende-container .box .ga-naar-opdrachten
+{
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	max-width: 100%;
+	z-index: 13;
+	transition: 0.5s;
+	transform-style: preserve-3d;
+	transform: translate3d(-50%,-50%,60px) rotate(0deg);
+	
+	
+}
+
+
+
+.bewegende-container .box .meer-opdrachten-macbook
+{
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	max-width: 100%;
+	z-index: 12;
+	transition: 0.5s;
+	transform-style: preserve-3d;
+	transform: translate3d(-50%,-50%,50px) rotate(0deg);
+	
+	
+}
+
+
+
 
 
 .bewegende-container .box:hover
@@ -528,6 +586,19 @@ transform: translate3d(-50%,-50%,100px) rotate(0deg);
 transform: translate3d(-50%,-50%,125px) rotate(0deg);
 	border-radius: 20px;
 	}
+
+
+.bewegende-container .box:hover .ga-naar-opdrachten
+{	
+transform: translate3d(-50%,-50%,160px) rotate(-90deg);
+	}
+
+
+.bewegende-container .box:hover .meer-opdrachten-macbook
+{	
+transform: translate3d(-50%,-50%,150px) rotate(0deg);
+	}
+
 
 
 	
