--- a/css/main.css
+++ b/css/main.css
@@ -433,7 +433,7 @@ body {
 	top: 50%;
 	left: 50%;
 	max-width: 100%;
-	z-index: 12;
+	z-index: 11;
 	transition: 0.5s;
 	transform-style: preserve-3d;
 	transform: translate3d(-50%,-50%,50px) rotate(0deg);
@@ -447,7 +447,7 @@ body {
 	top: 50%;
 	left: 50%;
 	max-width: 100%;
-	z-index: 11;
+	z-index: 10;
 	transition: 0.5s;
 	transform-style: preserve-3d;
 	transform: translate3d(-50%,-50%,50px) rotate(0deg);
@@ -461,7 +461,7 @@ body {
 	top: 50%;
 	left: 50%;
 	max-width: 100%;
-	z-index: 13;
+	z-index: 12;
 	transition: 0.5s;
 	transform-style: preserve-3d;
 	transform: translate3d(-50%,-50%,60px) rotate(0deg);
@@ -477,7 +477,7 @@ body {
 	top: 50%;
 	left: 50%;
 	max-width: 100%;
-	z-index: 12;
+	z-index: 10;
 	transition: 0.5s;
 	transform-style: preserve-3d;
 	transform: translate3d(-50%,-50%,50px) rotate(0deg);
@@ -604,7 +604,7 @@ transform: translate3d(-50%,-50%,100px) rotate(0deg);
 	
 .bewegende-container .box:nth-child(1)
 {
-	background-color: #29B3AC;
+	background: #29B3AC;
 }
 
 .bewegende-container .box:nth-child(2)
@@ -614,12 +614,12 @@ transform: translate3d(-50%,-50%,100px) rotate(0deg);
 
 .bewegende-container .box:nth-child(3)
 {
-	background-color: #CC494A;
+	background: #CC494A;
 }
 
 .bewegende-container .box:nth-child(4)
 {
-	background-color: #FA4343;
+	background: #FA4343;
 }
 
 
