--- a/css/main.css
+++ b/css/main.css
@@ -233,7 +233,6 @@ body {
 {
 	top: 20px;
 	opacity: 1;
-	backdrop-filter: blur(10px);
 }
 
 
@@ -299,7 +298,7 @@ body {
 	top: 50%;
 	left: 50%;
 	max-width: 100%;
-	z-index: 11;
+	z-index: 12;
 	transition: 0.5s;
 	transform-style: preserve-3d;
 	transform: translate3d(-50%,-50%,70px) rotate(0deg);
@@ -311,7 +310,7 @@ body {
 	top: 50%;
 	left: 50%;
 	max-width: 100%;
-	z-index: 12;
+	z-index: 13;
 	transition: 0.5s;
 	transform-style: preserve-3d;
 	transform: translate3d(-50%,-50%,60px) rotate(0deg);
@@ -323,7 +322,7 @@ body {
 	top: 50%;
 	left: 50%;
 	max-width: 100%;
-	z-index: 13;
+	z-index: 14;
 	transition: 0.5s;
 	transform-style: preserve-3d;
 	transform: translate3d(-50%,-50%,50px) rotate(0deg);
@@ -626,8 +625,7 @@ transform: translate3d(-50%,-50%,100px) rotate(0deg);
 
 .bewegende-container .box:nth-child(1) .circle
 {
-	background: rgba(255,255,255, 0.2);
-	bacckdrop-filter: blur(40px);
+	background-color:#A7BB13;
 }
 
 .bewegende-container .box:nth-child(2) .circle
