--- a/css/main.css
+++ b/css/main.css
@@ -219,7 +219,7 @@ body {
 	top: 40px;
 	left: 0;
 	text-align: center;
-	color: #FFFFFF;
+	color: #fff;
 	text-shadow: 0px 0px 40px #000;
 	width: 100%;
 	transform-style: preserve-3d;
@@ -233,6 +233,7 @@ body {
 {
 	top: 20px;
 	opacity: 1;
+		color: #fff;
 }
 
 
@@ -496,19 +497,19 @@ border-radius: 20px;
 
 .bewegende-container .box:hover .voorgrond
 {	
-transform: translate3d(-50%,-50%,160px) rotate(0deg);
+transform: translate3d(-50%,-50%,125px) rotate(0deg);
 	border-radius: 50px;
 	}
 
 .bewegende-container .box:hover .midden
 {	
-transform: translate3d(-35%,-50%,130px) rotate(0deg);
+transform: translate3d(-35%,-50%,100px) rotate(0deg);
 	border-radius: 0px;
 	}
 
 .bewegende-container .box:hover .achtergrond
 {	
-transform: translate3d(-60%,-50%,100px) rotate(-1deg);
+transform: translate3d(-60%,-50%,75px) rotate(-1deg);
 	border-radius: 0;
 	}
 
@@ -516,31 +517,31 @@ transform: translate3d(-60%,-50%,100px) rotate(-1deg);
 
 .bewegende-container .box:hover .voorgrond-logopedie
 {	
-transform: translate3d(-50%,-50%,140px) rotate(0deg);
+transform: translate3d(-50%,-50%,125px) rotate(0deg);
 	border-radius: 50px;
 	}
 
 .bewegende-container .box:hover .midden-logopedie
 {	
-transform: translate3d(-50%,-50%,120px) rotate(0deg);
+transform: translate3d(-50%,-50%,100px) rotate(0deg);
 	border-radius: 0px;
 	}
 
 .bewegende-container .box:hover .achtergrond-logopedie
 {	
-transform: translate3d(-50%,-50%,100px) rotate(-0deg);
+transform: translate3d(-50%,-50%,75px) rotate(-0deg);
 	border-radius: 0;
 	}
 
 .bewegende-container .box:hover .voorgrond-webbio
 {	
-transform: translate3d(-50%,-55%,120px) rotate(0deg);
+transform: translate3d(-50%,-55%,100px) rotate(0deg);
 	border-radius: 50px;
 	}
 
 .bewegende-container .box:hover .achtergrond-webbio
 {	
-transform: translate3d(-50%,-50%,100px) rotate(-0deg);
+transform: translate3d(-50%,-50%,75px) rotate(-0deg);
 	border-radius: 0;
 	}
 
@@ -625,7 +626,7 @@ transform: translate3d(-50%,-50%,100px) rotate(0deg);
 
 .bewegende-container .box:nth-child(1) .circle
 {
-	background-color:#A7BB13;
+	background:#A7BB13;
 }
 
 .bewegende-container .box:nth-child(2) .circle
@@ -636,13 +637,13 @@ transform: translate3d(-50%,-50%,100px) rotate(0deg);
 .bewegende-container .box:nth-child(3) .circle
 
 {
-	background-color: #0B3C80;
+	background: #0B3C80;
 }
 
 .bewegende-container .box:nth-child(4) .circle
 
 {
-	background-color: #fff;
+	background: #fff;
 }
 
 
