--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,7 @@ body {
 	margin: 0;
 	font-family: 'Montserrat', sans-serif;
 	background: #EAEAEA url('../images/achtergrond website.png');
+	
 }
 
 .header {
@@ -30,7 +31,21 @@ body {
 	position: relative;
 	width: 100%;
 	height: 275px;
-	margin: 15px 0 0 15px;
+	margin: 20px 0 0 20px;
+	background: #24A596;
+	border-radius: 20px;
+	transform-style: preserve-3d;
+	flex-wrap: wrap;
+	flex: 0 100%;
+	display: inline-block;
+}
+
+.bewegende-container .foto-box
+{
+	position: relative;
+	width: 100%;
+	height: 275px;
+	margin: 20px 0 0 20px;
 	background: #24A596;
 	border-radius: 20px;
 	transform-style: preserve-3d;
@@ -255,6 +270,18 @@ body {
 	transform: translate3d(-50%,-50%,50px);
 }
 
+.bewegende-container .foto-box .voorgrond
+{
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	max-width: 100%;
+	z-index: 11;
+	transition: 0.5s;
+	transform-style: preserve-3d;
+	transform: translate3d(-50%,-50%,70px) rotate(0deg);
+}
+
 .bewegende-container .box .voorgrond
 {
 	position: absolute;
@@ -335,10 +362,10 @@ body {
 	top: 50%;
 	left: 50%;
 	max-width: 100%;
-	z-index: 12;
+	z-index: 13;
 	transition: 0.5s;
 	transform-style: preserve-3d;
-	transform: translate3d(-50%,-50%,60px) rotate(0deg);
+	transform: translate3d(-50%,-50%,50px) rotate(0deg);
 }
 	
 .bewegende-container .box .achtergrond-webbio
@@ -347,7 +374,7 @@ body {
 	top: 50%;
 	left: 50%;
 	max-width: 100%;
-	z-index: 13;
+	z-index: 12;
 	transition: 0.5s;
 	transform-style: preserve-3d;
 	transform: translate3d(-50%,-50%,50px) rotate(0deg);
@@ -399,7 +426,7 @@ body {
 	border-radius: 20px;
 }
 
-.bewegende-container .box .experimentele-fotografie1
+.bewegende-container .foto-box .experimentele-fotografie1
 {
 	position: absolute;
 	top: 50%;
@@ -413,7 +440,7 @@ body {
 	mix-blend-mode: multiply;
 }
 
-.bewegende-container .box .experimentele-fotografie2
+.bewegende-container .foto-box .experimentele-fotografie2
 {
 	position: absolute;
 	top: 50%;
@@ -427,7 +454,7 @@ body {
 	mix-blend-mode: multiply;
 }
 
-.bewegende-container .box .experimentele-fotografie3
+.bewegende-container .foto-box .experimentele-fotografie3
 {
 	position: absolute;
 	top: 50%;
@@ -441,7 +468,7 @@ body {
 	mix-blend-mode: multiply;
 }
 
-.bewegende-container .box .experimentele-fotografie4
+.bewegende-container .foto-box .experimentele-fotografie4
 {
 	position: absolute;
 	top: 50%;
